FIX: padding issues on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -162,6 +162,6 @@
   }
   
   &.layouts-left-full #main-outlet {
-    padding-left: calc(var(--mainLeftOffset) - 15%);
+    padding-left: 6rem;
   }
 }
